# Pixelify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.gradle  build.sh  changelog.md  config.prop  customize.sh  deviceconfig.txt  dialer_phenotype_flags.xml  gradle.properties  inc.prop  keycheck  local.properties  module-uninstaller.prop  module.gradle  module.prop  no-VK.prop  recording.txt  sepolicy.rule  service-uninstaller.sh  service.sh  settings.gradle  spoof.prop  system.prop  uninstall.sh  update-no-vk.json  update.json  utils.sh  vars.sh
addon/: dumpsys
app/: build.gradle  proguard-rules.pro
files/: GEL.GSAPrefs.xml  PixeliflyDPS.apk  PixeliflyGA.apk  PixeliflyTTS.apk  PixelifyFilpendo.apk  PixelifyPixelLauncherCustomOverlay.apk  PixelifySettingsIntelligenceGoogleOverlay.apk  PixelifyThemesStub.apk  PixelifyWallpaper.apk  asp.tar.xz  bootanimation-m-1440.tar.xz  bootanimation-m.tar.xz  com.google.android.dialer  com.google.android.dialer-custom  com.google.android.googlequicksearchbox.xml  flip-30.tar.xz  flip.tar.xz  gsf.tar.xz  hotword.tar.xz  privapp-permissions-com.google.android.apps.nexuslauncher.xml  privapp-permissions-com.google.android.googlequicksearchbox.xml  privapp-permissions-com.google.android.inputmethod.latin.xml  sig.tar.xz  tur.tar.xz
module/: build.sh  config.prop  customize.sh  deviceconfig.txt  module-uninstaller.prop  module.prop  pixelify.sh  sepolicy.rule  service-uninstaller.sh  service.sh  spoof.prop  system.prop  utils.sh  (+3 more)
zygisk/src/main/cpp/: CMakeLists.txt  module.h  pixelify.cpp  tensor.cpp  tensor_2.cpp  zygisk.hpp
(+82 files in other folders)
